--- a/SelfStart/SelfStartFrontEnd/app/templates/components/client-nav.hbs
+++ b/SelfStart/SelfStartFrontEnd/app/templates/components/client-nav.hbs
@@ -35,19 +35,19 @@
             <!--<a  href="/"class="item">Initial Intake</a>-->
             <a href="/client/upload-photos" class="item">Upload Photos</a>
             <!--<a  href="/"class="item">Transations</a>-->
-            <a href="/client/appointment" class="item">Book Appointment</a>
+            <a href="/client/appointment" class="item">Appointment</a>
             <a  href="/client/settings"class="item">Settings</a>
             {{#link-to 'home'}}
-            <a class="item" {{action "logout"}}>Logout</a>
+            <a class="item" {{action "logout"}} style="margin-top: 28px">Logout</a>
             {{/link-to}}
           </div>
         </div>
       </div>
     </div>
 
-    
+
     {{yield}}
-    <div id="SkypeButton_Call_live:ramzi_abdullahi" style="position: fixed; right: 0; bottom: 0"></div>
+
   </div>
 </div>
 {{else}}
