--- a/SelfStart/SelfStartFrontEnd/app/templates/components/admin-nav.hbs
+++ b/SelfStart/SelfStartFrontEnd/app/templates/components/admin-nav.hbs
@@ -33,7 +33,7 @@
             <a href="/admin/forms" class="item">Forms</a>
             <a href="/admin/manage-selections" class="item">Configure</a>
             {{#link-to 'home'}}
-            <a class="item" {{action "logout"}}>Logout</a>
+            <a class="item" {{action "logout"}} style="margin-top: 28px;">Logout</a>
             {{/link-to}}
           </div>
         </div>
