--- a/SelfStart/SelfStartFrontEnd/app/templates/components/assessment-table.hbs
+++ b/SelfStart/SelfStartFrontEnd/app/templates/components/assessment-table.hbs
@@ -49,7 +49,9 @@
 
           <td class="right aligned one wide column" style="padding-right: 0">
             <p>{{display-assessment model=test.form assessment=test ID= test.id}}</p>
-
+          </td>
+          <td class="left aligned one wide column ">
+            <p >{{terminate-assessment ID=test.id patientID = model.id}}</p>
           </td>
 
         </tr>
