--- a/SelfStart/SelfStartFrontEnd/app/templates/components/book-appointment.hbs
+++ b/SelfStart/SelfStartFrontEnd/app/templates/components/book-appointment.hbs
@@ -237,7 +237,7 @@
         <div class="field" style="margin: 1em 0">
           <div class="ui centered grid"  style="margin-left: 0px">
             <button class="ui blue button" style="height: 50px;" {{action "backToPhoto"}}>Back</button>
-            <button class="ui blue button" style="height: 50px;" {{action "backToAppointment"}}>Next</button>
+            <button class="ui blue button" style="height: 50px;" {{action "goToAppointment"}}>Next</button>
 
           </div>
         </div>
