--- a/SelfStart/SelfStartFrontEnd/app/templates/components/book-appointment.hbs
+++ b/SelfStart/SelfStartFrontEnd/app/templates/components/book-appointment.hbs
@@ -91,6 +91,8 @@
 
 {{#if followupSelected}}
   <br><br><br>
+  {{payment-button-package-additional}}
+  <br><br>
   <form class="cd-form floating-labels" {{action "save" on="submit"}} style="padding-right: 10em; padding-left: 10em">
     <label class="cd-label">Select Physiotherapist</label>
     <p class="cd-select icon">
