--- a/SelfStart/SelfStartFrontEnd/app/templates/components/client-nav.hbs
+++ b/SelfStart/SelfStartFrontEnd/app/templates/components/client-nav.hbs
@@ -51,5 +51,5 @@
   </div>
 </div>
 {{else}}
-<p>You do not have authorization to this route, please register.</p>
+{{!-- <p>You do not have authorization to this route, please register.</p> --}}
 {{/if}}
