--- a/SelfStart/SelfStartFrontEnd/app/templates/components/assessment-table.hbs
+++ b/SelfStart/SelfStartFrontEnd/app/templates/components/assessment-table.hbs
@@ -12,19 +12,12 @@
     <table class="ui fixed table" style="border: none;border-color: white;">
       <tbody >
       <tr style="font-weight: bold;">
-        {{#each modelAttributes as |column|}}
-          <th class={{column.class}} {{action 'sortColumn' column.key column.dir}}>{{column.name}}
-            {{#if (eq column.dir 'asc')}}
-              <i class="sort ascending icon"></i>
-            {{/if}}
-            {{#if (eq column.dir 'desc')}}
-              <i class="sort descending icon"></i>
-            {{/if}}
-            {{#if (eq column.dir '')}}
-              <i class="sort icon"></i>
-            {{/if}}
+
+          <th>
+              Assessment Test
           </th>
-        {{/each}}
+          <th>Terminated</th>
+
         <th class="left aligned two wide  column">Actions</th>
       </tr>
       </tbody>
@@ -37,21 +30,26 @@
     <table class="ui fixed table" id="tb" style="margin: 0 0;border: none;">
       <tbody >
       <!--testModel = AssessmentTest-->
-      {{#each testModel as |test|}}
+      {{#each rehabclinetLink as |test|}}
         <tr>
-          {{#each modelAttributes as |column|}}
+          <td>
+            {{test.assessmentTest.name}}
+          </td>
+          <td>
+            {{#if test.terminated}}
+              Terminated
+            {{else}}
+              Ongoing
+            {{/if}}
+          </td>
 
-            <td class={{column.class}}>
-              {{get test column.key}}
-            </td>
-          {{/each}}
 
 
           <td class="right aligned one wide column" style="padding-right: 0">
-            <p>{{display-assessment model=test.form assessment=test ID= test.id}}</p>
+            <p>{{display-assessment model=test.assessmentTest.form assessment=test.assessmentTest ID= test.id}}</p>
           </td>
           <td class="left aligned one wide column ">
-            <p >{{terminate-assessment ID=test.id patientID = model.id}}</p>
+            <p >{{terminate-assessment ID=test}}</p>
           </td>
 
         </tr>
