--- a/SelfStart/SelfStartFrontEnd/app/templates/components/physio-nav.hbs
+++ b/SelfStart/SelfStartFrontEnd/app/templates/components/physio-nav.hbs
@@ -32,6 +32,7 @@
           <div class="right menu inverted">
             {{!-- <a href="/practitioner/askATherapist" class="item">Ask a Therapist</a> --}}
             <a href="/practitioner/clients" class="item">Clients</a>
+            <a href="/practitioner/ask-a-therapist" class="item">Ask A Therapist</a>
             <a  href="/practitioner/exercises"class="item">Exercise</a>
             <a  href="/practitioner/rehabplans"class="item">Menu Builder</a>
             <a href="/practitioner/appointment" class="item">Appointments</a>
