Updated number of session logic when client first books

--- a/SelfStart/SelfStartFrontEnd/app/templates/components/client-welcome.hbs
+++ b/SelfStart/SelfStartFrontEnd/app/templates/components/client-welcome.hbs
@@ -3,7 +3,7 @@
   <div class="ui container">
     <div class="introduction">
       <h1 class="ui inverted header">
-        <span class="library">Client Page</span>
+        <span class="library">Welcome {{clientName}}</span>
         {{#each model as |admin|}}
           <span class="tagline">
             {{admin.message}}
