--- a/SelfStart/SelfStartFrontEnd/app/templates/components/book-appointment.hbs
+++ b/SelfStart/SelfStartFrontEnd/app/templates/components/book-appointment.hbs
@@ -239,8 +239,7 @@
         <div class="field" style="margin: 1em 0">
           <div class="ui centered grid"  style="margin-left: 0px">
             <button class="ui blue button" style="height: 50px;" {{action "backToPhoto"}}>Back</button>
-            <button class="ui blue button" style="height: 50px;" {{action "goToAppointment"}}>Next</button>
-
+            <button class='ui blue button' style="height: 50px;" {{action "goToAppointment"}}>Next</button>
           </div>
         </div>
 
@@ -373,7 +372,7 @@
         <div class="field" style="margin: 1em 0">
           <div class="ui centered grid"  style="margin-left: 0px">
             <button class="ui blue button" style="height: 50px;" {{action "backToPhoto"}}>Back</button>
-            <button class="ui {{paid}} blue button" style="height: 50px;" {{action "goToAppointment"}}>Next</button>
+            <button class="ui blue button" style="height: 50px;" {{action "goToAppointment"}}>Next</button>
           </div>
         </div>
       {{/if}}
@@ -434,17 +433,19 @@
 
 
       <div class="field" style="margin: 1em 0;">
+        {{!-- <a href="javascript:history.back(-1);" > --}}
         <button class="fluid ui blue button" style="max-width: 100%; height: 50px;">
           Submit
         </button>
+        {{!-- </a> --}}
         <br>
       </div>
 
-      {{!--<br>-->
+      <!--<br>-->
       <!--<div>-->
         <!--<button class="ui fluid negative button" {{action "cancel_appointment"}}>Cancel</button>-->
         <!--<button class="ui fluid positive button" {{action "book_appointment"}}>Submit</button>-->
-      <!--</div>--}}
+      <!--</div>-->
     </form>
   </div>
 {{/ui-modal}}
