Added video source (must be logged in to OWL, needs to be public)

--- a/SelfStart/SelfStartFrontEnd/app/templates/components/book-appointment.hbs
+++ b/SelfStart/SelfStartFrontEnd/app/templates/components/book-appointment.hbs
@@ -168,7 +168,7 @@
             </div>
           </div>
 
-          {{ivy-videojs src="https://www.w3schools.com/html/mov_bbb.mp4"}}
+          {{ivy-videojs src="https://owl.uwo.ca/access/lessonbuilder/item/97105834/group/4fba372a-5b2d-4717-bb15-3e659416e637/Client%20Materials/Movement%20assessment%20video.mp4"}}
 
         </form>
       {{/if}}
